[package]
name = "combine-elastic-buffered-stream"
description = "Contains ElasticBufferedReadStream, a combine stream buffering a Read input, adapting its size to the checkpoints still alive."
license = "Unlicense"
version = "0.1.0"
authors = ["Nicolas Kirchner <nicolas.kirchner@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "3.8.1"